# psyche-elastic

./: .gitignore  AGENTS.md  Cargo.toml  DEVLOG.md  README.md  SYNERGY_PLAN.md
.cargo/: config.toml
experiments/: RESULTS.md  analyze.sh  experiment-log.md  heterogeneous-124m-results.md  run_experiments.sh
packaging/: README.md  build-release.sh  download-fineweb.sh  install.sh  serve.sh  setup-coordinator.sh  uninstall.sh
psyche-book/: book.toml  mathjax-config.js
scripts/: analyze_gradient_alignment.py  bootstrap-python-runtime.sh  compare_aligned_runs.py  create_llama_20m.py  create_nanogpt_llama_matched.py  create_small_nanogpt.py  download_fineweb10B.py  export_matformer_tiers.py  inference_nanogpt.py  lambda_cloud.py  make_tiny_llama_checkpoint.py  package-centralized-mac.sh  plot_100step_comparison.py  plot_a100_5000_stalled_pair.py  plot_a100_batch_hardness_20260216.py  plot_a100_matrix_500_enhanced.py  plot_a100_runs_20260216.py  plot_a100_runs_delta_20260216.py  plot_a100_step980_core4.py  plot_batch_hardness.py  plot_batchscale_500.py  plot_cosine_shadow_stats.py  plot_experiment_losses.py  plot_loss_curves.py  prepare_a100_fineweb_nanogpt.sh  prepare_tinyshakespeare_bin_dataset.py  psyche-centralized-client.sh  psyche-centralized-server.sh  psyche-centralized-spawn-clients.sh  psyche-env.sh  run-LSSS-diff.sh  run-LSSS-same.sh  run-exp-L-only-batch64.sh  run-exp-LSSS-same-batch64.sh  run-vram-experiment-batch64.sh  run_a100_batchscale_500.sh  run_a100_sign_1000.sh  (+9 more)
shared/network-fault-injection/: Cargo.toml
shared/network-fault-injection/src/: lib.rs
(+269 files in other folders)
